specifying packages versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-opencv-python-headless
-pillow
-numpy
+streamlit==1.27.2
+opencv-python-headless==4.8.0.74
+pillow==9.4.0
+numpy==1.25.0
+ultralytics==8.0.171
